Add initial mindflow support

--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -123,6 +123,7 @@
 <%- include('siunitx.preamble.en.tex'); %>
 <%- include('hyperref.preamble.de.tex', this); %>
 <% if (cleveref) { %><%- include('cleveref.preamble.de.tex', this); %><% } -%>
+<% if (texlive >= 2021) { %><%- include('mindflow.preamble.en.tex', this); %><% } -%>
 
 \usepackage{lipsum}
 <% if (examples) { -%>
@@ -300,6 +301,7 @@ break;
 Hier sollen allgemeine \LaTeX-Hinweise gegeben werden, damit man Minimalbeispiele vorliegen hat, um sofort loszulegen.
 
 <%- include('paragraphs.example.de.tex', this); %>
+<% if (texlive >= 2021) { %><%- include('mindflow.example.en.tex', this); %><% } -%>
 <%- include('hyphenation.example.en.tex', this); %>
 <%- include('siunitx.example.en.tex', this); %>
 <% if (enquotes == 'csquotes')  { %><%- include('csquotes.example.en.tex', this); %><% } -%>
