--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -145,6 +145,7 @@
 <%- include('hyperref.preamble.en.tex', this); %>
 <%- include('subfig.preamble.en.tex', this); %>
 <% if (cleveref) { %><%- include('cleveref.preamble.en.tex', this); %><% } -%>
+<% if (texlive >= 2021) { %><%- include('mindflow.preamble.en.tex', this); %><% } -%>
 
 \usepackage{lipsum}
 <% if (examples) { -%>
@@ -667,6 +668,7 @@ This <% if (heading1 == "\\chapter") {%>chapter<% } else { %>section<% } %> cont
 It focuses on minimal examples, which can be directly adapted to the content
 
 <%- include('paragraphs.example.en.tex', this); %>
+<% if (texlive >= 2021) { %><%- include('mindflow.example.en.tex', this); %><% } -%>
 <%- include('hyphenation.example.en.tex', this); %>
 <%- include('siunitx.example.en.tex', this); %>
 <% if (enquotes == 'csquotes') { %><%- include('csquotes.example.en.tex', this); %><% } -%>
