--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -1,7 +1,9 @@
 <% switch (documentclass) { case "lncs": -%>
 % This template has been tested with LLNCS DOCUMENT CLASS -- version 2.20 (10-Mar-2018)
+
 <% break; case "ieee": -%>
 % This template has been tested with IEEEtran of 2015.
+
 <% break; } -%>
 % !TeX spellcheck = en-US
 % !TeX encoding = utf8
@@ -142,6 +144,7 @@
 <%- include('siunitx.preamble.en.tex'); %>
 <%- include('hyperref.preamble.en.tex', this); %>
 <%- include('subfig.preamble.en.tex', this); %>
+<% if (texlive >= 2021) { %><%- include('mindflow.preamble.en.tex', this); %><% } -%>
 <% if (cleveref) { %><%- include('cleveref.preamble.en.tex', this); %><% } -%>
 
 \usepackage{lipsum}
@@ -665,6 +668,7 @@ This <% if (heading1 == "\\chapter") {%>chapter<% } else { %>section<% } %> cont
 It focuses on minimal examples, which can be directly adapted to the content
 
 <%- include('paragraphs.example.en.tex', this); %>
+<% if (texlive >= 2021) { %><%- include('mindflow.example.en.tex', this); %><% } -%>
 <%- include('hyphenation.example.en.tex', this); %>
 <%- include('siunitx.example.en.tex', this); %>
 <% if (enquotes == 'csquotes') { %><%- include('csquotes.example.en.tex', this); %><% } -%>
