Some texlive 2019 tweaks

--- a/generators/app/templates/font.preamble.en.tex
+++ b/generators/app/templates/font.preamble.en.tex
@@ -53,6 +53,7 @@ lualatex
 <% } else { -%>
 <%# Default LaTeX Font and LuaLaTeX -%>
 <%# -%>
+<% if (texlive >= 2021) { -%>
 
 % Typewriter font (for source code etc)
 % Use New Computer Modern font (Computer Modern is the default LaTeX font; this is the implemented modern variant)
@@ -76,6 +77,7 @@ BoldItalicFont=NewCMMono10-BoldOblique.otf,%
 SmallCapsFeatures={Numbers=OldStyle}]{NewCMMono10-Regular.otf}
 
 \setmathfont{NewCMMath-Regular.otf}
+<% } -%>
 <% } break; } -%>
 
 % Enable proper ligatures
