--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -49,10 +49,16 @@
 % DO NOT DOWNLOAD IEEEtran.cls - Use the one of your LaTeX distribution
 % For the final version, replace "draftcls" by "final"
 \documentclass[<%= ieee_variant %>,<%= papersize %>paper]{IEEEtran}[2015/08/26]
+<% if (texlive >= 2021) { -%>
 
 % Balance the last page
 % The pbalance package (see https://ctan.org/pkg/pbalance) "just works" (in contrast to balance.sty or other solutions)
 \usepackage{pbalance}
+<% } else { -%>
+
+% Balance the last page using the balance package (see https://ctan.org/pkg/balance)
+\usepackage{balance}
+<% } -%>
 
 <% break; default: -%>
 \documentclass[
