--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -42,9 +42,10 @@
 % To disable outputting page headers and footers, remove "runningheads"
 \documentclass[runningheads,a4paper,english]{llncs}[2018/03/10]
 <% break; case "acmart": -%>
+<% if (texlive >= 2021) { -%>
 % We balance the last page using the package "pbalance" (see https://ctan.org/pkg/pbalance), because it "just works" (in contrast to balance.sty or other solutions)
-% In case you have an older texlive distribution, replace "pbalance" by "balance"
-\documentclass[sigconf,review,pbalance]{acmart}
+<% } -%>
+\documentclass[<%= acm_format %>,<% if (acm_review %>review,<% } %><% if (texlive >= 2021) { %>pbalance<% } else { %>balance<% } %>]{acmart}
 <% break; case "ieee": -%>
 % DO NOT DOWNLOAD IEEEtran.cls - Use the one of your LaTeX distribution
 % For the final version, replace "draftcls" by "final"
@@ -717,22 +718,23 @@ You should explicitly discuss limitations and shortcomings of your work and deta
 <% switch (documentclass) { case "lncs": -%>
 \subsubsection*{Acknowledgments}
 <% break; case "acmart": -%>
-\section*{Acknowledgments}
+\begin{acks}
 <% break; case "ieee": -%>
 % regular IEEE prefers the singular form
 \section*{Acknowledgment}
 <% break; default: -%>
 <% break; } -%>
 <% if ((documentclass == 'acmart') || (documentclass == 'lncs') || (documentclass = 'ieee')) { -%>
+Identification of funding sources and other support, and thanks to individuals and groups that assisted in the research and the preparation of the work should be included in an acknowledgment section, which is placed just before the reference section in your document \cite{acmart}.
+
 <% if (howtotext) { -%>
 The hints on writing a paper/thesis are taken from Dirk Fahland's \href{https://github.com/dfahland/Master-or-Bachelor-thesis-Template-Eindhoven-University-of-Technology}{LaTeX template for Bachelor and Master theses at Eindhoven University of Technology}.
-<% } else { -%>
-\ldots
-<% } -%>
 <% } -%>
 <% if (documentclass == 'acmart') { -%>
 
 For more \LaTeX{} hints for ACM read on at \url{https://www.acm.org/publications/taps/latex-best-practices}.
+\end{acks}
+<% } -%>
 <% } -%>
 
 %%% ===============================================================================
