--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -40,7 +40,7 @@
 <% if (texlive >= 2021) { -%>
 % We balance the last page using the package "pbalance" (see https://ctan.org/pkg/pbalance), because it "just works" (in contrast to balance.sty or other solutions)
 <% } -%>
-\documentclass[<%= acm_format %>,<% if (acm_review %>review,<% } %><% if (texlive >= 2021) { %>pbalance<% } else { %>balance<% } %>]{acmart}
+\documentclass[<%= acm_format %>,<% if (acm_review) { %>review,<% } %><% if (texlive >= 2021) { %>pbalance<% } else { %>balance<% } %>]{acmart}
 <% break; case "ieee": -%>
 
 % DO NOT DOWNLOAD IEEEtran.cls - Use the one of your LaTeX distribution
@@ -57,12 +57,11 @@
 \usepackage{balance}
 <% } -%>
 
-<% break; default: -%>
+<% break; case "scientific-thesis": -%>
 
 % EN: The following package allows \\ at the title page
 %     For more information see https://github.com/latextemplates/scientific-thesis-cover/issues/4
 \RequirePackage{kvoptions-patch}
-<% } -%>
 \documentclass[
   % fontsize=11pt is the standard
   numbers=noenddot,
@@ -78,7 +77,11 @@
   %               draft    % um zu sehen, wo noch nachgebessert werden muss - wichtig, da Bindungskorrektur mit drin
   draft=false
 ]{scrbook}
-<% break; } -%>
+<% break; default: -%>
+
+% not yet supported template. Please report to the author of generator-latex-template
+\documentclass{scrbook}
+<% } -%>
 
 % backticks (`) are rendered as such in verbatim environments.
 % See following links for details:
