Add missing bib entry

--- a/generators/app/templates/bibliography.bib
+++ b/generators/app/templates/bibliography.bib
@@ -33,7 +33,7 @@
   year   = {2017},
   url    = {http://texdoc.net/mwe},
 }
-<% if (documentclass == 'acmart') { -%>
+<% if ((documentclass == 'acmart') || (documentclass == 'lncs') || (documentclass = 'ieee')) { -%>
 
 @Misc{acmart,
   author =       "Boris Veytsman",
