--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -13,6 +13,12 @@
 <% } -%>
 % !BIB program = <%= bibtextool %>
 % -*- coding:utf-8 mod:LaTeX -*-
+<% if (documentclass == 'scientific-thesis') { -%>
+
+% EN: The following package allows \\ at the title page
+%     For more information see https://github.com/latextemplates/scientific-thesis-cover/issues/4
+\RequirePackage{kvoptions-patch}
+<% } -%>
 <% switch (documentclass) { case "lncs": -%>
 
 % "a4paper" enables:
@@ -36,13 +42,10 @@
 % To disable outputting page headers and footers, remove "runningheads"
 \documentclass[runningheads,a4paper,english]{llncs}[2018/03/10]
 <% break; case "acmart": -%>
-
-<% if (texlive >= 2021) { -%>
 % We balance the last page using the package "pbalance" (see https://ctan.org/pkg/pbalance), because it "just works" (in contrast to balance.sty or other solutions)
-<% } -%>
-\documentclass[<%= acm_format %>,<% if (acm_review) { %>review,<% } %><% if (texlive >= 2021) { %>pbalance<% } else { %>balance<% } %>]{acmart}
+% In case you have an older texlive distribution, replace "pbalance" by "balance"
+\documentclass[sigconf,review,pbalance]{acmart}
 <% break; case "ieee": -%>
-
 % DO NOT DOWNLOAD IEEEtran.cls - Use the one of your LaTeX distribution
 % For the final version, replace "draftcls" by "final"
 \documentclass[<%= ieee_variant %>,<%= papersize %>paper]{IEEEtran}[2015/08/26]
@@ -57,11 +60,7 @@
 \usepackage{balance}
 <% } -%>
 
-<% break; case "scientific-thesis": -%>
-
-% EN: The following package allows \\ at the title page
-%     For more information see https://github.com/latextemplates/scientific-thesis-cover/issues/4
-\RequirePackage{kvoptions-patch}
+<% break; default: -%>
 \documentclass[
   % fontsize=11pt is the standard
   numbers=noenddot,
@@ -77,11 +76,7 @@
   %               draft    % um zu sehen, wo noch nachgebessert werden muss - wichtig, da Bindungskorrektur mit drin
   draft=false
 ]{scrbook}
-<% break; default: -%>
-
-% not yet supported template. Please report to the author of generator-latex-template
-\documentclass{scrbook}
-<% } -%>
+<% break; } -%>
 
 % backticks (`) are rendered as such in verbatim environments.
 % See following links for details:
@@ -142,10 +137,8 @@
 <%- include('floatflt.preamble.en.tex', this); -%>
 <% } -%>
 <% if (todo == 'pdfcomment') { -%>
-
 <%- include('pdfcomment.preamble.en.tex', this); -%>
 <% } else { -%>
-
 <%- include('plainlatextodo.preamble.en.tex', this); -%>
 <% } -%>
 
@@ -723,26 +716,23 @@ You should explicitly discuss limitations and shortcomings of your work and deta
 
 <% switch (documentclass) { case "lncs": -%>
 \subsubsection*{Acknowledgments}
-
 <% break; case "acmart": -%>
-\begin{acks}
+\section*{Acknowledgments}
 <% break; case "ieee": -%>
 % regular IEEE prefers the singular form
 \section*{Acknowledgment}
-
 <% break; default: -%>
 <% break; } -%>
 <% if ((documentclass == 'acmart') || (documentclass == 'lncs') || (documentclass = 'ieee')) { -%>
-Identification of funding sources and other support, and thanks to individuals and groups that assisted in the research and the preparation of the work should be included in an acknowledgment section, which is placed just before the reference section in your document \cite{acmart}.
 <% if (howtotext) { -%>
-
 The hints on writing a paper/thesis are taken from Dirk Fahland's \href{https://github.com/dfahland/Master-or-Bachelor-thesis-Template-Eindhoven-University-of-Technology}{LaTeX template for Bachelor and Master theses at Eindhoven University of Technology}.
+<% } else { -%>
+\ldots
+<% } -%>
 <% } -%>
 <% if (documentclass == 'acmart') { -%>
 
 For more \LaTeX{} hints for ACM read on at \url{https://www.acm.org/publications/taps/latex-best-practices}.
-\end{acks}
-<% } -%>
 <% } -%>
 
 %%% ===============================================================================
