--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -732,7 +732,7 @@ You should explicitly discuss limitations and shortcomings of your work and deta
 
 <% break; default: -%>
 <% break; } -%>
-<% if ((documentclass == 'acmart') || (documentclass == 'lncs') || (documentclass = 'ieee')) { -%>
+<% if ((documentclass == 'acmart') || (documentclass == 'lncs') || (documentclass == 'ieee')) { -%>
 Identification of funding sources and other support, and thanks to individuals and groups that assisted in the research and the preparation of the work should be included in an acknowledgment section, which is placed just before the reference section in your document \cite{acmart}.
 <% if (howtotext) { -%>
 
