Initial support for reitzig's image

--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -1,3 +1,6 @@
+<% if (preparereitzig) { -%>
+\RequirePackage{snapshot}
+<% } -%>
 <% if (documentclass == 'lncs') { -%>
 % Dieses Template wurde mit der "LLNCS DOCUMENT CLASS -- version 2.20 (10-Mar-2018)" getestet
 
