--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -1,3 +1,6 @@
+<% if (preparereitzig) { -%>
+\RequirePackage{snapshot}
+<% } -%>
 <% switch (documentclass) { case "lncs": -%>
 % This template has been tested with LLNCS DOCUMENT CLASS -- version 2.20 (10-Mar-2018)
 
