Use CTAN's llncs

--- a/generators/app/templates/font.preamble.en.tex
+++ b/generators/app/templates/font.preamble.en.tex
@@ -45,7 +45,7 @@ lualatex
 \setmonofont[StylisticSet={1,3},Scale=.9]{Inconsolatazi4}
 <% } -%>
 <%  break; default: -%>
-if (documentclass === 'ieee' { -%>
+<%  if (documentclass === 'ieee') { -%>
 <%# The default font configuration of the IEEE template is used -%>
 <% } else { -%>
 <%# Default LaTeX Font and LuaLaTeX -%>
